0.9.4+

0.9.4   2014-03-30:
    improve inotify error messages
    configure.ac default make options; fix -Wformat-security warning #416
    adjust new window maximized panel sizes #420
    fix toolbar checkbox item properties icon insensitive #418
    fix panel_sliders-key used as task height 0.9.2-0.9.3 #419
    reset Use-as-opener on import/install plugin; update man
    task error continue no present open task dialog
    gnome-terminal 3.10 no longer accepts --disable-factory #428
    desktop dialogs pop to top #424
    [GTK2] Preferences|Desktop table row collision #427
    [desktop] preserve location of renamed file(s)
    [dialog] remove blank lines reading file into drop, combo, m/list
    [dialog] remove linefeeds inserting value into input/-large
    [dialog] @FILE values not saved on cancel #321
    Preferences|Desktop|Font dlg honor cancel
    fix new config devices shown not saved
    path bar middle-click replace contents and activate
    open .desktop treat %u/%U as %f/%F per freedesktop spec
    single-click method no hover selection option #154
    update translations de ru sv
0.9.3   2014-01-17:
    fix memory leak on draw selection rectangle on desktop #397
    [Dialog] fix returned windowsize=1x1 [GTK 3.8+]
    fix maximized panel sliders not restored #402
    README, man: update kernel polling instructions #403
    look in applications subdirs for .desktop file; debug info #405
    clear g_ascii_strcasecmp warning on owner sort
    case insensitive app sort, tooltips, uniq in app chooser dialog #405
    startup test for /bin/bash installed #413
    task columns default expansion to avoid flicker #235
0.9.2   2013-12-06:
    README correct packages link
    manual note full/max col widths not saved #382
    adjust maximized and fullscreen behavior #382
    add su-to-root support
    detect rename of current folder and close tab #243
    fix list view auto drag action on drop to last row #387