@@ -1,5 +1,12 @@
 0.9.4+
-
+    revert desktop dialogs pop to top #424 bba93a50 dlgs on wrong desktop
+    update translations cs de pl ru sv
+    add transparent background option [BwackNinja]
+    fix Attempt to unlock mutex that was not locked startup error #468
+    fixed 'Invalid cross-device link' when renaming aufs dirs
+    configure option --disable-desktop-integration hides Prefs|Desktop tab #448
+    fixed problem in command-line option --show-pref=N not showing Advanced tab
+    add configure option --with-bash-path #452
 0.9.4   2014-03-30:
     improve inotify error messages
     configure.ac default make options; fix -Wformat-security warning #416
